src/test/deca/context/invalid/Objet/Class_repeted.des
The class A has already been declared